--- a/home-project/index.html
+++ b/home-project/index.html
@@ -11,3 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<script src="https://kit.fontawesome.com/f4c3e90124.js" crossorigin="anonymous"></script>
